as2/6.3/modules/ROOT/pages/as2-connector-examples.adoc
= AS2 Connector 6.3 Examples - Mule 4
:page-aliases: connectors::as2/as2-connector-examples.adoc

The following examples show how to configure send and receive messages with receipts in Anypoint Connector for AS2 (AS2 Connector):

* <<configure-send-message,Configure Sending AS2 Messages>>
* <<configure-mdn-receipt,Configure an AS2 MDN Listener for Receiving Receipts>>
* <<configure-listener-receive,Configure an AS2 Listener for Receiving Messages>>

[[configure-send-message]]
== Configure Sending AS2 Messages

This example shows you how to configure an AS2 send message with an MDN request.

. In Anypoint Studio, place AS2 Connector in your flow.
. To send an AS2 message with a request for MDN in your Mule application,
create a global *AS2 Connector Send config* element for use by the AS2 send operations, specify values for the following fields:
+
[%header%autowidth.spread]
|===
|Key| Description
|Self config - AS2 Partner Name| Sender’s AS2 system identifier. Used for `AS2-From` and `AS2-To` headers.
|Self config - x509 alias| Sender’s certificate or private key alias in the keystore. Required if using signing or encryption.
|Self config - Email| Sender partner’s email.
|Partner config - AS2 ID| Receiver’s AS2 system identifier. Used for `AS2-From` and `AS2-To` headers.
|Partner config - x509 alias| Receiver’s certificate or private key alias in the keystore. Required if using signing or encryption.
|Partner config - Email| Receiver partner’s email.
|Requester config - Subject| Free-form text for MIME subject header. Can include references to self or partner `simpleName` values along with the message `fileName`, for example, sending the `file example.txt` to partner via AS2.
|Requester config - MDN MIC Signature Algorithm| The algorithm with which MIC is calculated for the MDN signature. `UNSIGNED` by default.
|Requester config - Request a receipt| Option to request a receipt from the partner. `SIGNED_OPTIONAL` by default.
|Requester config - Request delivery URL| Asynchronous receipt delivery URL that points to the MDN listener endpoint.
|Requester config - Encryption Algorithm| The encryption algorithm for encrypting the message. `UNENCRYPTED` by default.
|Requester config - MIC Signature Algorithm| The algorithm with which MIC is calculated for the message signature. `UNSIGNED` by default.
|Requester config - Content transfer encoding| The content transfer encoding. `BINARY` by default.
|Requester config - Compression type| ZLIB is the only supported compression and decompression type. `NONE` by default.
|Keystore config - Keystore Path| The path of the keystore with certificates and keys.
|Keystore config - Keystore Password| The password for the keystore.
|Keystore config - Private key Password| The private key password, if required.
|===
+
. Configure a connection to the partner AS2 endpoint by providing the *Partner Base URL* value.
. If you want to configure other connection details (such as TLS, proxy, basic authentication, and timeouts), do so now.
. Send the message by using either the *Send with Sync MDN* or *Send with Async MDN* operation:

** `payload` is the message content to send.

** `Filename` is the file name of the message to send.

** The `Boolean` required to configure if the process should fail or if the receipt status is not processed.

. If you choose to request an asynchronous receipt, you must configure `MDN Listener`.

[[configure-mdn-receipt]]
=== Configure an AS2 MDN Listener for Receiving Receipts

This example shows you how to set up the *As 2 mdn listener* source to receive receipts.

. In the *Mule Palette* view, select *AS2 > As 2 mdn listener*.
. Drag *As 2 mdn listener* to the Studio canvas and reference the global configuration defined here:

[%header%autowidth.spread]
|===
|Key| Description
|Self config - AS2 ID| Sender partner’s OID.
|Self config - x509 alias| Sender’s certificate or private key alias in the keystore.
|Self config - Email| Sender partner’s email.
|Partner config - AS2 ID| Receiver partner’s OID.
|Partner config - x509 alias| Receiver’s certificate or private key alias in the keystore.
|Partner config - Email| Receiver partner’s email.
|HTTP Listener config| Reference to HTTP Listener global configuration.
|Keystore config - Keystore Path| The path of the keystore with certificates and keys.
|Keystore config - Keystore Password| The password for the keystore.
|Keystore config - Private key Password| The private key password if required.
|===

[[configure-listener-receive]]
=== Configure an AS2 Listener for Receiving Messages

This example shows you how to configure an *As 2 listener* source to receive MDN requests asynchronously.

. In the *Mule Palette* view, select *AS2 > As 2 listener*.
. Drag *As 2  listener* to the Studio canvas and reference the global configuration defined here:
+
[%header%autowidth.spread]
|===
|Key| Description
|Self config - AS2 ID| Receiver partner’s OID.
|Self config - x509 alias| Receiver alias as defined in the keystore file.
|Self config - Email| Receiver partner’s email.
|Partner config - AS2 ID| Sender partner’s OID.
|Partner config - x509 alias| Sender alias as defined in the keystore.
|Partner config - Email| Sender partner’s email.
|HTTP Listener config| Reference to HTTP Listener global configuration.
|Keystore config - Keystore Path| The path of the keystore with certificates and keys.
|Keystore config - Keystore Password| The password for the keystore.
|Keystore config - Private key Password| The private key password, if required.
|Inbound Request Authentication| Configure Basic Authentication credentials that are allowed within the incoming request.
|===
+
. Configure a connection to the partner if the MDN request is to be sent asynchronously.
. If you want to configure other connection details (such as TLS, proxy, and timeouts) do that now.

== Sending MDNs to Multiple Partners in Partner Manager

The following example shows how to send MDNs to multiple partners. This example contains two flows:

* The first flow listens for AS2 messages on path `/forward-as2` and forwards them to `/forward-van/as2-receive`.
* The second flow sends

The first flow listens for AS2 messages:

image::as2-connector-send-mdn-1-example.png[Flow for receiving and forwarding AS2 messages]

The second flow xxx:
image::as2-connector-send-mdn-2-example.png[Flow for receiving and forwarding AS2 messages]

The XML for this example is:

[source,xml,linenums]
----

<?xml version="1.0" encoding="UTF-8"?>
<?xml version="1.0" encoding="UTF-8"?>

<mule xmlns:ee="http://www.mulesoft.org/schema/mule/ee/core" xmlns:tls="http://www.mulesoft.org/schema/mule/tls"
	xmlns:http="http://www.mulesoft.org/schema/mule/http"
	xmlns:as2-mule4="http://www.mulesoft.org/schema/mule/as2-mule4" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/as2-mule4 http://www.mulesoft.org/schema/mule/as2-mule4/current/mule-as2-mule4.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/tls http://www.mulesoft.org/schema/mule/tls/current/mule-tls.xsd
http://www.mulesoft.org/schema/mule/ee/core http://www.mulesoft.org/schema/mule/ee/core/current/mule-ee.xsd">
	<http:listener-config name="HTTP_Listener_config" doc:name="HTTP Listener config" doc:id="35d8e9ef-c8f9-4364-aa90-957de030b9b4" basePath="b2b" >
		<http:listener-connection protocol="HTTPS" host="0.0.0.0" port="${https.port}" >
			<tls:context >
				<tls:key-store type="jks" path="rootca.jks" alias="rootca" keyPassword="test" password="test" />
			</tls:context>
		</http:listener-connection>
	</http:listener-config>

	<configuration-properties doc:name="Configuration properties" doc:id="b0baf25d-17ef-4d10-bb24-2c5b25e6289c" file="app.properties" />
	<as2-mule4:listener-config name="AS2_Connector_Listener_ForwardVAN" doc:name="AS2 Connector Listener config" doc:id="59fd60b5-92f4-4532-9b03-41be1e8c27bc" httpListenerConfig="HTTP_Listener_config" securityLevel="SIGNED_ENCRYPTED" >
		<as2-mule4:self-config as2Name="forward-van" x509Alias="forward-van" email="support@forward-van.com" />
		<as2-mule4:partner-config as2Name="myth-as2" x509Alias="myth-as2" email="support@mythical.com" />
		<as2-mule4:key-store-config keystorePassword="test" keystorePath="as2/forward-van.p12" privateKeyPassword="test" />
	</as2-mule4:listener-config>
	<as2-mule4:send-config name="AS2_Connector_Send_config" doc:name="AS2 Connector Send config" doc:id="6628b7a2-0577-4d96-aa48-fcd5ff57b1ea" >
		<as2-mule4:connection partnerURL="#[vars.as2URL]" >
			<tls:context >
				<tls:trust-store insecure="true" />
			</tls:context>
		</as2-mule4:connection>
		<as2-mule4:self-config as2Name="#[vars.as2Sender]" x509Alias="#[vars.as2Sender]" email="support@forward-van.com" />
		<as2-mule4:partner-config as2Name="#[vars.as2Receiver]" x509Alias="#[vars.as2Receiver]" email="support@mythical.com"/>
		<as2-mule4:requester-config subject="EDI" messageIntegrityCheckAlgorithm="SHA256" mdnMessageIntegrityCheckAlgorithm="SHA256" encryptionAlgorithm="DES_EDE3" requestReceipt="SIGNED_REQUIRED"/>
		<as2-mule4:keystore-config keystorePassword="test" keystorePath="as2/forward-van.p12" privateKeyPassword="test" />
	</as2-mule4:send-config>
	<flow name="forward-van-as2-simulatorFlow" doc:id="7908ee11-bda5-40b9-a3bc-53bcea5cc96c" >
		<as2-mule4:as2-listener doc:name="Forward VAN AS2 Listener" doc:id="39f3e8e1-c75f-489f-b148-509d4638c1d6" config-ref="AS2_Connector_Listener_ForwardVAN" path="/forward-van/as2-receive"/>
		<logger level="INFO" doc:name="Logger" doc:id="5f8dcd82-64c4-4188-9197-f0237e7e35d2" message="Received AS2 message from Mythical's Partner Manager"/>
		<logger level="INFO" doc:name="IDOC Payload from Mythical to Forward VAN" doc:id="d4499996-9c51-4080-8494-9da219a7ff31" message="#[payload]"/>
	</flow>
	<flow name="forward-van-as2-simulatorFlow1" doc:id="3662b755-a22e-467d-9f5b-bd2b0d860d3e" >
		<http:listener doc:name="/forward-van/as2-send" doc:id="934e0e83-fc10-4e41-b247-23bc767c7c8c" config-ref="HTTP_Listener_config" path="/forward-van/as2-send"/>
		<logger level="INFO" doc:name="Logger" doc:id="2a716fae-3f38-477d-8c81-c35d808355d5" message="Forward VAN is sending IDOC to Mythical via AS2"/>
		<set-variable value="#[attributes.headers.'as2-URL']" doc:name="as2URL" doc:id="b6db3530-841d-4f8b-87c1-4c1499e72b7d" variableName="as2URL"/>
		<set-variable value="#[attributes.headers.'as2-from']" doc:name="as2Sender" doc:id="213e69bd-999b-4af4-a23e-3af410e4e616" variableName="as2Sender"/>
		<set-variable value="#[attributes.headers.'as2-to']" doc:name="as2Receiver" doc:id="2d08bfe8-d50e-4c7a-9f6a-90c35d978184" variableName="as2Receiver"/>
		<as2-mule4:send-with-sync-mdn doc:name="Send with Sync MDN" doc:id="d103b4df-589e-45d3-afe7-bf791e56410b" config-ref="AS2_Connector_Send_config" outputMimeType="application/EDI-X12">
			<as2-mule4:custom-headers ><![CDATA[#[output application/java
---
{
	"PLANT-CODE" : "ABC-12345"
}]]]></as2-mule4:custom-headers>
		</as2-mule4:send-with-sync-mdn>
		<logger level="INFO" doc:name="Logger" doc:id="c23c22fc-200e-4aa5-b126-63a14609b23a" message="#[output application/json --- attributes]"/>
		<set-payload value="#[output application/json --- attributes.as2MdnAttributes]" doc:name="Set Payload" doc:id="7ce67919-7116-4013-9c35-aa268081643c" />
	</flow>
</mule>
----

=== Listening


[source,xml,linenums]
----
<?xml version="1.0" encoding="UTF-8"?>

<mule xmlns:as2-mule4="http://www.mulesoft.org/schema/mule/as2-mule4" xmlns="http://www.mulesoft.org/schema/mule/core"
	xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/as2-mule4 http://www.mulesoft.org/schema/mule/as2-mule4/current/mule-as2-mule4.xsd">
	<as2-mule4:listener-config name="AS2_Connector_Listener_Shared" doc:name="AS2 Connector Listener config" doc:id="9576729c-7d61-4e48-b307-290d22e91cae" httpListenerConfig="HTTP_Listener_config" securityLevel="SIGNED_ENCRYPTED" >
		<as2-mule4:self-config as2Name="forward-van" x509Alias="forward-van" email="support@forward-van.com" />
		<as2-mule4:listener-mode >
			<as2-mule4:shared-mode >
				<as2-mule4:partner-configs >
					<as2-mule4:partner-detail-extended as2Name="mythical-as2" x509Alias="mythical-as2" email="support@mythical.com" >
						<as2-mule4:auth-details username="mythical-as2-user" password="mythical123" />
					</as2-mule4:partner-detail-extended>
					<as2-mule4:partner-detail-extended as2Name="nto-as2" x509Alias="nto-as2" email="support@nto.com" >
						<as2-mule4:auth-details username="nto-as2-user" password="nto123" />
					</as2-mule4:partner-detail-extended>
					<as2-mule4:partner-detail-extended as2Name="myth-as2" x509Alias="myth-as2" email="support@myth.com" />
				</as2-mule4:partner-configs>
			</as2-mule4:shared-mode>
		</as2-mule4:listener-mode>
		<as2-mule4:key-store-config keystorePassword="test" keystorePath="as2/forward-van.p12" privateKeyPassword="test" />
	</as2-mule4:listener-config>
	<flow name="forward-van-as2-receiverFlow" doc:id="c97053c0-2c56-4f9f-bb1a-8a352f09fab7" >
		<as2-mule4:as2-listener doc:name="As 2 listener" doc:id="2b51ada6-cbd7-4990-807d-f358aea353eb" config-ref="AS2_Connector_Listener_Shared" path="/forward-as2"/>
		<logger level="INFO" doc:name="Logger" doc:id="8575bb34-88cd-4c26-a024-db524055f308" message="Received AS2 message from #[attributes.fromName]"/>
		<logger level="INFO" doc:name="Logger" doc:id="5a09ac5f-fbe1-450f-9a9b-457741efb769" message="#[payload]"/>
	</flow>
</mule>
----

==



== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
